--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+  scroll-behavior: smooth;
+}
 #main-info {
   display: flex;
   justify-content: space-around;
@@ -62,6 +65,7 @@ article img {
   border-radius: 30%;
 }
 article {
+  max-width: 300px;
   position: relative;
   background-color: #9b4e0fb6;
   border-radius: 5px;
@@ -73,6 +77,7 @@ article {
   padding: 2rem 2rem;
   margin: 1rem 0;
   box-shadow: -5px 5px 15px 0px;
+  font-family: "RocknRoll One", sans-serif;
 }
 .picture {
   /* width: 80%; */
@@ -83,7 +88,9 @@ article {
   justify-content: center;
 }
 .firstname,
-.lastname {
+.lastname,
+.middlename,
+.nickname {
   width: fit-content;
 }
 .lastname {
@@ -97,10 +104,11 @@ article {
   z-index: 40;
 }
 .gender {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  color: white;
 }
 .house {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .blood {
   margin-bottom: 10px;
@@ -263,4 +271,14 @@ img {
 .name {
   font-family: "RocknRoll One", sans-serif;
   color: azure;
+}
+h1 {
+  text-align: center;
+  font-family: "RocknRoll One", sans-serif;
+}
+#searchByName {
+  margin-bottom: 10px;
+}
+#filterConteiner {
+  margin-bottom: 10px;
 }
